Fix scrollbar

--- a/scss/part/_scrollbar.scss
+++ b/scss/part/_scrollbar.scss
@@ -3,6 +3,7 @@
 // Scrollbars
 
 // Thick scrollbar
+.auto__76cc7,
 .auto_a48086 {
     &::-webkit-scrollbar {
         width: $size-border * 2;
